# opengl-toolkit

./: LICENSE  README.md
1_hellow_window/: CMakeLists.txt
1_hellow_window/src/: main.cpp
2_hellow_traingle/src/: main.cpp
3_1_hellow_shaders/src/: main.cpp
3_2_changing_colors/includes/: utils_glfw.h
3_2_changing_colors/src/: glad.c  main.cpp
3_5_vertex_class/includes/: shader_s.h
3_5_vertex_class/src/: main.cpp
4_1_hellow_texture/: 3.3.shader.fs
4_1_hellow_texture/src/: main.cpp
4_2_texture_units/src/: main.cpp
5_1_hellow_rotation/src/: main.cpp
5_2_camera_go3D/: 3.3.shader.vs
5_2_camera_go3D/src/: main.cpp
5_3_rotate_3D/: 3.3.shader.vs  CMakeLists.txt
5_3_rotate_3D/src/: glad.h  main.cpp
